Fix: Theme selector radio button not aligned in center with the text (#11676)
* Theme selector radio button aligned in center with the text

* fixed alignment, align-items at correct position now

---------

--- a/res/css/views/settings/_ThemeChoicePanel.pcss
+++ b/res/css/views/settings/_ThemeChoicePanel.pcss
@@ -21,6 +21,7 @@ limitations under the License.
     flex-wrap: wrap;
 
     > .mx_StyledRadioButton {
+        align-items: center;
         padding: $font-16px;
         box-sizing: border-box;
         border-radius: 10px;
